--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -2,8 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="25dp" />
-            <solid android:color="@color/dark_blue" />
+            <corners android:radius="8dp" />
+            <solid android:color="@color/white" />
+            <stroke android:width="1.5dp"
+                android:color="@color/gray_3"/>
         </shape>
     </item>
 </selector>
