--- a/app/src/main/res/drawable/sign_up_background.xml
+++ b/app/src/main/res/drawable/sign_up_background.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="25dp" />
-            <solid android:color="@color/dark_blue" />
+            <corners android:radius="16dp" />
+            <solid android:color="@color/white" />
         </shape>
     </item>
 </selector>
