--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bitter_sweet">#FE7762</color>
+    <color name="gray_3">#828282</color>
+    <color name="pink">#E91E63</color>
+    <color name="background">#EEEEEE</color>
+    <color name="blue">#3F51B5</color>
+    <color name="dark_blue">#2E3B85</color>
+    <color name="green">#165936</color>
 </resources>
