--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EEEEEE">
+  >
 
 
     <ScrollView
@@ -56,7 +56,7 @@
             android:layout_marginEnd="@dimen/dp_16"
             android:gravity="center"
             android:text="@string/good_luck"
-            android:textColor="@color/dark_blue"
+            android:textColor="@color/good_luck_color"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,11 +71,11 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dp_16"
             android:layout_marginTop="@dimen/dp_16"
-            android:background="@color/background"
+            android:background="@color/text_input_background_color"
             android:hint="@string/subject_count"
-            app:boxBackgroundColor="@color/background"
-            app:boxStrokeColor="@color/blue"
-            app:hintTextColor="@color/blue"
+            app:boxBackgroundColor="@color/text_input_background_color"
+            app:boxStrokeColor="@color/box_color"
+            app:hintTextColor="@color/box_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -609,7 +609,7 @@
             android:fontFamily="@font/manrope_semibold"
             android:text="@string/compute"
             android:textAllCaps="false"
-            android:textColor="@color/background"
+            android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.52"
@@ -625,7 +625,7 @@
             android:layout_marginTop="@dimen/dp_24"
             android:layout_marginBottom="@dimen/dp_16"
             android:text="@string/gpa"
-            android:textColor="@color/dark_blue"
+            android:textColor="@color/gpa_color"
             android:textSize="@dimen/sp_24"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -641,7 +641,7 @@
             android:layout_marginEnd="@dimen/dp_16"
             android:layout_marginBottom="@dimen/dp_16"
             android:text=" "
-            android:textColor="@color/dark_blue"
+            android:textColor="@color/gpa_color"
             android:textSize="@dimen/sp_24"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
