--- a/app/src/main/res/drawable-night/sign_up_background.xml
+++ b/app/src/main/res/drawable-night/sign_up_background.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="16dp" />
-            <solid android:color="@color/black" />
+            <solid android:color="@color/white" />
         </shape>
     </item>
 </selector>
