--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="16dp" />
-            <solid android:color="@color/black" />
+            <corners android:radius="8dp" />
+            <solid android:color="#FFACAAAA" />
         </shape>
     </item>
 </selector>
