--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,16 @@
     <color name="blue">#3F51B5</color>
     <color name="dark_blue">#2E3B85</color>
     <color name="green">#165936</color>
+    <color name="text_color">#FE7762</color>
+    <color name="or_color">#FE7762</color>
+    <color name="sign_up_color">#EEEEEE</color>
+    <color name="good_luck_color">#2E3B85</color>
+    <color name="text_input_color">#EEEEEE</color>
+    <color name="text_input_background_color">#FFFFFFFF</color>
+    <color name="gpa_color">#2E3B85</color>
+    <color name="box_color">#2E3B85</color>
+    <color name="next_color">#FF000000</color>
+    <color name="information_color">#FF000000</color>
+    <color name="info_text_color">#FF000000</color>
+    <color name="dark_gray">#424242</color>
 </resources>
