--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.GPA" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Base.Theme.GPA" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+     <item name="android:statusBarColor">@color/dark_blue</item>
     </style>
 
     <style name="Theme.GPA" parent="Base.Theme.GPA" />
