--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -12,9 +12,6 @@
         <action
             android:id="@+id/switchFromWelcomeFragmentToInformationFragment"
             app:destination="@id/informationFragment" />
-        <action
-            android:id="@+id/switchFromWelcomeFragmentToSignUpFragment"
-            app:destination="@id/signUpFragment" />
     </fragment>
     <fragment
         android:id="@+id/informationFragment"
@@ -26,29 +23,8 @@
             app:destination="@id/calculatorFragment2" />
     </fragment>
     <fragment
-        android:id="@+id/signUpFragment"
-        android:name="com.rubabe.gpa.fragment.SignUpFragment"
-        android:label="fragment_sign_up"
-        tools:layout="@layout/fragment_sign_up" >
-        <action
-            android:id="@+id/switchFromSignUpToInformationFragment"
-            app:destination="@id/informationFragment" />
-        <action
-            android:id="@+id/switchFromSignUpFragmentToWelcomeFragment"
-            app:destination="@id/welcomeFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/calculatorFragment2"
         android:name="com.rubabe.gpa.fragment.CalculatorFragment"
         android:label="fragment_calculator"
-        tools:layout="@layout/fragment_calculator" >
-        <action
-            android:id="@+id/switchFromCalculatorFragmentToStorageFragment"
-            app:destination="@id/storageFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/storageFragment"
-        android:name="com.rubabe.gpa.fragment.StorageFragment"
-        android:label="fragment_storage"
-        tools:layout="@layout/fragment_storage" />
+        tools:layout="@layout/fragment_calculator" />
 </navigation>
