--- a/app/src/main/res/drawable-night/color_second_button.xml
+++ b/app/src/main/res/drawable-night/color_second_button.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="25dp" />
-            <solid android:color="#FFEB3B" />
+            <solid android:color="#7A0909" />
         </shape>
     </item>
 </selector>
